...
  groupBy: () => t`Group by`,
  toc: () => t`Table of contents`,
  appliedDark: () => t`Applied as dark theme`,
  appliedLight: () => t`Applied as light theme`,
  basic: () => t`Basic`,
  loginToYourAccount: () => t`Sign in to your account`,
  continue: () => t`Continue`,
  unlockWithBiometrics: () => t`Unlock with biometrics`,
  fileCheck: () => t`Run file check`,
  rename: () => t`Rename`,
  no: () => t`No`,
  yes: () => t`Yes`,
  cancel: () => t`Cancel`,
  skip: () => t`Skip`,
  changePasswordConfirm: () => t`I understand, change my password`,
  next: () => t`Next`,
  forgotPassword: () => t`Forgot password?`,
  cancelLogin: () => t`Cancel sign-in`,
  logoutFromDevice: () => t`Logout from this device`,
  useAccountPassword: () => t`Use account password`,
  addColor: () => t`Add color`,
  unlockNote: () => t`Unlock note`,
  couldNotUnlock: () => t`Could not unlock`,
  unlockNoteDesc: () =>
    t`Your note will be unencrypted and removed from the vault.`,
  deleteAllNotes: () => t`Delete notes in this vault permanently`,
  getStarted: () => t`Get started`,
  saveACopy: () => t`Save a copy`,
  discard: () => t`Discard`,
  undo: () => t`Undo`,
  keep: () => t`Keep`,
  restore: () => t`Restore`,
  deletePermanently: () => t`Delete permanently`,
...
    Editor: () => t`Editor`,
    Home: () => t`Home`,
    Search: () => t`Search`,
    Monographs: () => t`Published`,
    Archive: () => t`Archive`,
    Templates: () => t`Templates`,
    AllNotes: () => t`All Notes`,
    Inbox: () => t`Inbox`
  },
  searchInRoute: (
    routeName: keyof typeof SEARCH_IN_ROUTE_STRINGS | ({} & string)
  ) => {
    return (
...
  noNotebooksSelectedToMove: () => t`No notebooks selected to move`,
  scrollToTop: () => t`Scroll to top`,
  scrollToBottom: () => t`Scroll to bottom`,
  emailConfirmedDesc: () =>
    t`Your email has been confirmed. You can now securely sync your encrypted notes across all devices.`,
  charactersCount: (count: number) => t`${count} characters`,
  iAlreadyHaveAnAccount: () => t`I already have an account`,
  upgradePlan: () => t`Upgrade plan`,
  upgrade: () => t`Upgrade`,
  checkoutFaqs: [
    {
      question: () => t`What happens to my data if I switch plans?`,
      answer: () =>
...
