...
              >
                <FormInput
                  name="email"
                  formRef={formRef}
                  fwdRef={emailInputRef}
                  loading={loading}
                  testID="input.email"
                  returnKeyLabel="Next"
                  returnKeyType="next"
                  autoComplete="email"
                  keyboardType="email-address"
                  autoCorrect={false}
                  autoCapitalize="none"
...

                <FormInput
                  name="password"
                  formRef={formRef}
                  fwdRef={passwordInputRef}
                  loading={loading}
                  testID="input.password"
                  returnKeyLabel="Next"
                  returnKeyType="next"
                  secureTextEntry
                  autoComplete="password"
                  autoCapitalize="none"
                  blurOnSubmit={false}
...

                <FormInput
                  name="confirmPassword"
                  formRef={formRef}
                  fwdRef={confirmPasswordInputRef}
                  loading={loading}
                  testID="input.confirmPassword"
                  returnKeyLabel="Signup"
                  returnKeyType="done"
                  secureTextEntry
                  autoComplete="password"
                  autoCapitalize="none"
                  autoCorrect={false}
...
